objects/Design_Atelier_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Opportunity_Number__c</fullName>
        <label>DA Opportunity Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Opportunity__c</fullName>
        <label>DA Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Design Atelier Quotes</relationshipLabel>
        <relationshipName>Design_Atelier_Quotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXT_Oppty_Quote_Number__c</fullName>
        <externalId>true</externalId>
        <label>EXT Oppty Quote Number</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Subtotal__c</fullName>
        <label>Order Subtotal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Forecast_Amount__c</fullName>
        <formula>IF(AND(Forecast__c, NOT(Converted__c), NOT(ISBLANK(Order_Subtotal__c))), Order_Subtotal__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quote Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Design Atelier Quote</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EXT_Oppty_Quote_Number__c</columns>
        <columns>DA_Opportunity_Number__c</columns>
        <columns>Quote_Id__c</columns>
        <columns>NAME</columns>
        <columns>Order_Subtotal__c</columns>
        <columns>Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Design Atelier Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Atelier Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>